[B]Retrospect v5.2.6 - Changelog - 2020-06-09[/B]

This new version of Retrospect addresses a number of channel bugs. Besides this the behavior of the bitrate limiting was changed and by default no limit is set. Users can still change this via the add-on settings. There was also a fix for changed Kodi Matrix Python API.

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
* Fixed: Regression bug that caused the description prefixes to not be on a new line

[B]Channel related[/B]
_None_